prepare merging the master.